# happer

./: README.md
DTSLDecode/: .classpath  .project  README  memory_maps.txt
DTSLDecode/MemDump/: CMakeCache.txt  CMakeLists.txt  Makefile  README  android_memory_dump  android_toolchain.cmake  cmake_install.cmake  ptrace_dump.c
DTSLDecode/PreprocessScripts/: manual_arm.sh  manual_arm64.sh  oatdump_arm.sh  oatdump_arm64.sh  objdump_arm.sh  objdump_arm64.sh  objdump_header_arm.sh  objdump_header_arm64.sh
DTSLDecode/libVex/: config.h  guest_arm64_helpers.c  guest_arm64_toIR.c  guest_mips_helpers.c  guest_s390_helpers.c  libvex.h  libvex_basictypes.h  libvex_inner.h  main_main.c
DTSLDecode/libVex/executable/: CMakeCache.txt  CMakeLists.txt  Makefile  TransformOpcode2Vex.c  TransformOpcode2Vex.h  cmake_install.cmake
DTSLRepackage/: .classpath  .project
DTSLRepackage/output_DSJar/: com_arm_debug_dtsl_components_ETMv4TraceSource.sh  com_arm_debug_trace_commands_NewTraceReportCommand.sh  com_arm_debug_trace_decode_TraceReaderDTSLSource.sh
ds5-scripts/aosp_6_0/arm/: ArtQuickGenericJniEndTrampoline.py  ArtQuickGenericJniTrampoline.py  ArtQuickToInterpreterBridge.py  ClassModification.py  DexFile.py  DexModification.py  DoCall.py  Invoke.py  JNI_onLoad.py  LoadClassMembers.py  LoadMethod.py  LoadNativeLibrary.py  clock_gettime.py  config.py  dump_library.py  gettimeofday.py  memory.py  mmu.py  physical_memory.py  setup.py  (+2 more)
smali/: .project
smali/baksmali/: .project
smali/dexlib2/: .classpath  .project
smali/smali/: .classpath  .project
smali/util/: .project
(+143 files in other folders)
